@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 /*
  * This file was generated by the Gradle 'init' task.
  *
@@ -50,4 +51,58 @@ sourceSets {
             srcDirs = ['src/main/resources']
         }
     }
+=======
+/*
+ * This file was generated by the Gradle 'init' task.
+ *
+ * This generated file contains a sample Java application project to get you started.
+ * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
+ * User Manual available at https://docs.gradle.org/8.0.2/userguide/building_java_projects.html
+ */
+
+plugins {
+    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+
+}
+
+repositories {
+    // Use Maven Central for resolving dependencies.
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.openjfx:javafx-controls:20'
+    implementation 'org.openjfx:javafx-fxml:20'
+    implementation 'org.openjfx:javafx-base:20'
+    implementation 'org.openjfx:javafx-graphics:20'
+
+    // This dependency is used by the application.
+    implementation 'com.google.guava:guava:31.1-jre'
+}
+
+application {
+    // Define the main class for the application.
+    mainClass = 'eazysorder.App'
+}
+
+javafx{
+    version = "21.0.3"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+run {
+    args = ['--module-path', 'path/to/javafx-sdk-20/lib', '--add-modules', 'javafx.controls,javafx.fxml']
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/resources']
+        }
+    }
+>>>>>>> f48e2078cc0638222f2d24d94dbad635278daf87
 }
